[gd_scene load_steps=3 format=3 uid="uid://diwvcgbmr6rmk"]

[ext_resource type="Script" uid="uid://cjc2ymabjh770" path="res://scripts/ui/GearPanel.gd" id="1_2sbph"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4xvns"]
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
border_color = Color(0.266667, 0.266667, 0.266667, 1)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="GearPanel" type="Control" groups=["GearUI", "LevelUI"]]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_2sbph")

[node name="Panel" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_4xvns")

[node name="MarginContainer" type="MarginContainer" parent="Panel"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="MainVBox" type="VBoxContainer" parent="Panel/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12
alignment = 1

[node name="TitleLabel" type="Label" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Current Equipment"
horizontal_alignment = 1

[node name="GearGrid" type="GridContainer" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
columns = 3

[node name="WeaponSlot" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/GearGrid"]
layout_mode = 2

[node name="WeaponLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/WeaponSlot"]
layout_mode = 2
text = "Weapon"

[node name="WeaponItemLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/WeaponSlot"]
layout_mode = 2
text = "None
"

[node name="ArmorSlot" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/GearGrid"]
layout_mode = 2

[node name="ArmorLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/ArmorSlot"]
layout_mode = 2
text = "Armor"

[node name="ArmorItemLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/ArmorSlot"]
layout_mode = 2
text = "None"

[node name="RelicSlot" type="VBoxContainer" parent="Panel/MarginContainer/MainVBox/GearGrid"]
layout_mode = 2

[node name="RelicLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/RelicSlot"]
layout_mode = 2
text = "Relic"

[node name="RelicItemLabel" type="Label" parent="Panel/MarginContainer/MainVBox/GearGrid/RelicSlot"]
layout_mode = 2
text = "None"

[node name="BonusLabel" type="Label" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
text = "Total Active Bonuses:"

[node name="BonusText" type="RichTextLabel" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="LegacyBonusText" type="RichTextLabel" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
bbcode_enabled = true
fit_content = true

[node name="CloseButton" type="Button" parent="Panel/MarginContainer/MainVBox"]
layout_mode = 2
text = "Close"
